[gd_scene load_steps=4 format=2]

[ext_resource path="res://base nodes/AND.gd" type="Script" id=1]
[ext_resource path="res://Assets/AND.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/ANDHover.tres" type="StyleBox" id=3]

[node name="Gate" type="Button"]
margin_left = -40.0
margin_top = -36.0
margin_right = 40.0
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 40, 36 )
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 80.0
margin_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 40, 36 )
custom_colors/font_color = Color( 0.156863, 0.168627, 0.12549, 1 )
text = "AND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_Button_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
